# israeli-invoice-parser-lib

./: .gitignore  LICENSE  README.md  publish_pypi_package.sh  pyproject.toml  requirements.txt
src/israeli_invoice_parser/: __init__.py  base_parser.py  comax_parser.py  factory.py  pairzon_parser.py  rami_levy_parser.py  weezmo_parser.py
